# mi_nobl_root

./: README.md  do_chmod.sh  kernelsu_patched.ko  ksu_oneclick.bat  ksu_step1.sh  ksu_step2.sh  logs_out.txt  patch_ksu_module.py  read_logs.sh  read_verbose.sh  run.ps1
cpp/: CMakeLists.txt  mi_nobl_ksu.cpp  nobl_ksu.cpp
magisk/: run.ps1
root/: rsp.sh  run.ps1
